--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,32 @@ body,
 html {
   margin: 0;
   font-family: "ubuntu";
+  width: 100%;
 }
 
 body {
   overflow-x: hidden;
 }
 
-.TopSection {
-  background-image: url("https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/iphone-12-finish-select-202207-product-red_AV1?wid=5120&hei=2880&fmt=p-jpg&qlt=80&.v=1662150079101");
-  background-repeat: no-repeat;
+.TopImg {
+  z-index: 2;
+  flex-grow: 1;
+}
 
-  background-size: cover;
-  min-height: 100vh;
-  width: 105vw;
+.TopImgDiv {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 2;
+  display: flex;
+}
+
+.TopSection {
+  height: 100vh;
+}
+
+.TopImg > img {
+  height: 100%;
+  width: 100%;
+  object-fit: none;
 }
