--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,14 +1,21 @@
 .HeaderTop {
-  width: 100vw;
+  width: 100%;
+  z-index: 3;
+  position: sticky;
+  top: 0;
 }
 
 .HeaderTop > ul {
+  padding-left: 0;
+  width: 100%;
+  flex-wrap: wrap;
   display: flex;
   gap: 1rem;
   list-style: none;
   justify-content: space-around;
   margin-top: 0;
   padding-top: 20px;
+  z-index: 3;
 }
 
 .HeaderTop > ul > :nth-child(2) {
@@ -18,4 +25,36 @@
 }
 .HeaderTop > ul > :nth-child(3) {
   margin-right: 5%;
+}
+
+.PruttyShop {
+  margin-left: 3%;
+}
+
+.PruttyShop > li > span {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px black;
+}
+
+.CartLi {
+  position: relative;
+}
+
+.CartCount {
+  position: absolute;
+  background-color: red;
+  border-radius: 50%;
+  width: 20px;
+  left: 15px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  bottom: 15px;
+  flex-grow: 1;
+  user-select: none;
+}
+.CartLi > svg {
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
 }
