--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -36,6 +36,11 @@
   -webkit-text-stroke: 2px black;
 }
 
+.pruttyLi > span {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px black;
+}
+
 .CartLi {
   position: relative;
 }
@@ -57,4 +62,8 @@
   height: 20px;
   width: 20px;
   cursor: pointer;
+}
+
+.MiddleBtns {
+  padding-right: 1%;
 }
