--- a/src/Components/Products/ProductContainer.css
+++ b/src/Components/Products/ProductContainer.css
@@ -68,4 +68,24 @@
   background-color: white;
   border: 2px solid #61677a;
   cursor: pointer;
+  position: relative;
+}
+
+.PopupContainer {
+  position: fixed;
+
+  align-items: flex-start;
+  margin-left: 20px;
+  height: fit-content;
+
+  width: 20vw;
+
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.1rem;
+  z-index: 10;
+  flex-grow: 1;
+  margin-right: 81%;
 }
