--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -22,6 +22,7 @@
   display: flex;
   margin: 0 auto;
   gap: 1rem;
+  padding-right: 2%;
 }
 .HeaderTop > ul > :nth-child(3) {
   margin-right: 5%;
