--- a/src/Components/Products/ProductContainer.css
+++ b/src/Components/Products/ProductContainer.css
@@ -34,9 +34,12 @@
 
 .ProductImgContainer > img {
   width: 100%;
+  max-height: 100%;
 }
 .ProductImgContainer {
   height: 14.5rem;
+  display: flex;
+  align-items: flex-end;
 }
 
 .ProductListInfo {
@@ -52,15 +55,16 @@
 .productCategory {
   text-transform: uppercase;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .productName {
   font-size: 18px;
+  text-align: center;
 }
 
 .productPrice {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 .productButton > button {
@@ -88,4 +92,10 @@
   z-index: 10;
   flex-grow: 1;
   margin-right: 81%;
+}
+
+.EmptyCart {
+  font-size: 32px;
+  text-align: center;
+  margin-top: 10rem;
 }
