--- a/src/Components/ShoppingCartList/ShoppingCartList.css
+++ b/src/Components/ShoppingCartList/ShoppingCartList.css
@@ -2,13 +2,12 @@
   font-size: 32px;
   text-align: center;
   text-transform: uppercase;
-  border-top: 2px solid rgba(143, 135, 135, 0.5);
+
   border-bottom: 2px solid rgba(143, 135, 135, 0.5);
   padding: 30px;
 }
 
 .CartImgContainer > img {
-  width: 70px;
   height: 70px;
 }
 
@@ -56,7 +55,7 @@
 
 .descriptionList > ul > :nth-child(2) {
   display: flex;
-  gap: 2rem;
+  gap: 1.4rem;
   padding-right: 5%;
 }
 
@@ -80,7 +79,7 @@
 
 .SumRow {
   flex-grow: 1;
-  width: 120%;
+
   display: flex;
   margin-left: 3%;
   margin-top: 15px;
@@ -94,4 +93,58 @@
   width: 90%;
   margin-left: 20px;
   margin-top: 3%;
+}
+
+.tableBtn {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.tableBtn > button {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+
+  font-size: 22px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.itemName > p {
+  display: none;
+}
+
+@media (max-width: 802px) {
+  .leftRightContainer {
+    flex-direction: column;
+  }
+  .leftSide {
+    width: 100vw;
+  }
+  .rightSide {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 550px) {
+  .CartPriceContainer {
+    display: none;
+  }
+  .totalPrice {
+    display: none;
+  }
+  #total {
+    display: none;
+  }
+  #price {
+    display: none;
+  }
+  .itemName > p {
+    display: block;
+    margin: 0;
+  }
 }
